bug fix in breadcrumb out of screen

--- a/assets/styles/modules/product/_carousel.scss
+++ b/assets/styles/modules/product/_carousel.scss
@@ -19,6 +19,7 @@
 		margin: .25em auto 1em;
 
 		& .carousel__cell{
+			height: 11vh;
 			width: 28%;
 			margin: 0 .25em;
 		}
